bug fixed: nested tables issue